Add drizzle-orm and drizzle-typebox dependencies; update error message for missing environment variables

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "format": "bunx prettier --write ."
   },
   "dependencies": {
+    "drizzle-orm": "^0.45.0",
+    "drizzle-typebox": "^0.3.3",
     "elysia": "latest"
   },
   "devDependencies": {
